一週間分曜日取得

--- a/src/github.com/junpeionizawa/callender/resources/index.html
+++ b/src/github.com/junpeionizawa/callender/resources/index.html
@@ -7,30 +7,36 @@
     <link rel="stylesheet" type="text/css" href="../resources/styles.css">
 </head>
 <body>
-<p>:{{.Weekday }}</p>
  <div>
  	<pre><h1 class="month_now">{{.Month }} 月     <span>{{.Year }} 年</span></h1></pre>
  </div>
   <div id ="box1"> 
    <div class="box2"> 
-     <p>{{.Day1 }}</p>
+   	<p>{{.Weekday }}</p>
+    <p>{{.Day1 }}</p>
    </div>
    <div class="box2"> 
+   	<p>{{.Weekday2 }}</p> 
    	<p>{{.Day2}}</p>
    </div>
    <div class="box2"> 
+    <p>{{.Weekday3}}</p>
    	<p>{{.Day3}}</p>
    </div>
-   <div class="box2"> 
+   <div class="box2">
+    <p>{{.Weekday4}}</p> 
     <p>{{.Day4}}</p>
    </div>
    <div class="box2"> 
+   	<p>{{.Weekday5}}</p> 
 	<p>{{.Day5}}</p>
    </div>
    <div class="box2"> 
+   	<p>{{.Weekday6}}</p> 
 	<p>{{.Day6}}</p>
    </div>
    <div class="box2"> 
+   	<p>{{.Weekday7}}</p> 
 	<p>{{.Day7}}</p>
    </div>
   
