javascript 現在時刻取得コード追記

--- a/src/github.com/junpeionizawa/callender/resources/index.html
+++ b/src/github.com/junpeionizawa/callender/resources/index.html
@@ -5,6 +5,34 @@
     <meta charset="UTF-8">
     <title>テスト</title>
     <link rel="stylesheet" type="text/css" href="../resources/styles.css">
+     <script>
+        function digitalClock(){
+            // 現在日時を取得
+            var now = new Date();
+            // 「時」を取得
+            var hour = now.getHours();
+            // 「分」を取得
+            var minute = now.getMinutes();
+            // 「秒」を取得
+            var second = now.getSeconds();
+ 
+            // 0埋めで2桁表示にする　例）08:45:09
+            if(hour < 10) hour = "0" + hour;
+            if(minute < 10) minute = "0" + minute;
+            if(second < 10) second = "0" + second;
+ 
+            // 現在時刻を表示する
+            var elem = document.getElementById("clock");
+            elem.innerHTML = hour + ":" + minute + ":" + second;
+ 
+            // 500ミリ秒後に再帰呼び出し
+            setTimeout(digitalClock, 500);
+        }
+         
+        window.onload = function(){
+            digitalClock();
+        }
+    </script>
 </head>
 <body>
 <div class="calenderbox">
@@ -16,8 +44,11 @@
      <p class="Date">{{.Weekday }}</p>
    </div>
    <div id="box3"> 
-   	<pre><p class="time">{{.Hour}} : {{.Minute}}</p></pre>
+   	<pre><p class="time">{{.Hour}} : {{.Minute}}:{{.Second}}</p></pre>
    </div>
   </div>
 </div>
+<h1>デジタル時計</h1>
+<p id="clock"></p>
+
 </body>
